# sakura-travel

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README copy.md  README.md  detail_filling  detail_submitted  docker-compose.prod.yml  docker-compose.yml  full.diff  generating  generating)  parse_spots.py  pyproject.toml  start-dev.bat  validated  validating  目录说明.md
.claude/: config.json  settings.json  settings.local.json
.github/: CODEOWNERS
.lib/: fontconfig-1  gobject-2.0-0  harfbuzz-0  pango-1.0-0  pangocairo-1.0-0  pangoft2-1.0-0
app/: main.py
ci/: ruff_ewf_baseline.json
data/: circle_registry.json  context_score_design.json  entity_affinity_seed_v1.json  followup_templates.json  japan_region_usertype_matrix_v1.json  p0_route_skeleton_templates_v1.json  questionnaire_to_theme_weights_rules_v1.json  route_region_binding_v1.json  route_templates  seed_progress.json  tabelog_sapporo_enriched.json  tabelog_sapporo_raw.json  日本_日本区域与线路_SeedData_v1.xlsx  鏃ユ湰_鏃ユ湰鍖哄煙涓庣嚎璺痏SeedData_v1.xlsx
deploy/: Dockerfile.backend  Dockerfile.frontend  auto-deploy.sh  deploy.sh  docker-compose.yml  init.sql  nginx.conf  notify.sh  setup-ops.sh  setup-ssl.sh  setup.sh  watchdog.sh
docs/: 01_positioning_and_value.md  01_system_core.md  02_fragment_system.md  02_product_structure_and_pricing.md  03_report_delivery_rules.md  03_theme_lines_and_high_ticket.md  04_positioning_pricing_themes.md  05_content_and_growth.md  05_content_engine_and_accounts.md  06_growth_funnel_and_frontend.md  06_retention_and_roadmap.md  07_ops_playbook.md  07_private_domain_and_retention.md  08_eval_cases.md  08_long_term_roadmap.md  09_eval_graders.md  10_e2e_testing_guide.md  11_api_dependency_map.md  11_copywriting_audit.md  12_report_structure.md  13_ai_codebase_map.md  A19-A27_DELIVERY_PREVIEW_QUESTIONNAIRE.md  AGENTS.md  AI_WORK_GUIDE.md  API_PROVIDERS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHECKPOINT_REVIEW_20260331.md  DATA_COLLECTION_CATEGORIES.md  DATA_ENGINEER_TASK.md  DATA_FIRST_PRINCIPLES.md  DATA_SOURCE_REGISTRY.md  DATA_STRATEGY.md  DECISIONS.md  ENTITY_REVIEW_DIMENSIONS.md  FEATURE_GAP_ANALYSIS.md  FRONTEND_REDESIGN.md  IMPLEMENTATION_TASKS.md  ITINERARY_PLANNING_FINAL_WORKFLOW.md  KANSAI_SPOTS_PLAN.md  (+30 more)
docs-ai/: README.md  config_inventory.md  data_models.md  dependency_map.md  do_not_break.md  module_registry.md  naming_conventions.md  pipeline_catalog.md  prompt_catalog.md  repo_index.md  runtime_entrypoints.md
docs-human/: 00-overview.md  01-product-scope.md  02-system-architecture.md  03-data-system.md  04-generation-workflow.md  05-delivery-workflow.md  06-ops-and-customer-service.md  07-content-engine.md  08-deployment-and-env.md  09-risk-and-known-issues.md  crawlers-guide.md  travel_ai_unified_system_doc.md
evals/: README.md
exports/: 713a6497-56fc-4a6c-b0ff-f4b07b719064.html  f7a6d3b9-5f8b-407d-98aa-d10b6e756af0.html
fix/: A_内容架构与生成链路改造设计.md  TASK_AUDIT_四层补充接入.md  TASK_A_内容架构改造任务拆解.md  TASK_DATA_数据层补充任务拆解.md  TASK_E_编排层任务拆解.md  TASK_FINAL_四层收尾全景.md  TASK_L3_渲染层任务书_Sonnet46.md  TASK_L4_评测校验运营层任务书_Sonnet46.md  初版预览_用户微调_最终版执行方案_v1.md  四层逻辑补充接入审计_v1.md  图片采集与描述评价数据方案_v1.md  管理后台_权重与运营配置方案_v1.md
hooks/: pre-commit
japan/: 字段权威.md
major/: 01_城市圈到完整攻略_生成流程表.md  01_城市圈到完整攻略_生成流程表说明.md  02_关西城市圈系统结构表.md  02_旅行前指引模块设计.md  03_东京城市圈系统结构表.md  04_北海道城市圈系统结构表.md  05_北九州城市圈系统结构表.md  06_冲绳本岛城市圈系统结构表.md  07_中部北陆城市圈系统结构表.md  07_北疆伊犁赛里木湖圈系统结构表.md  08_多城市圈系统结构表_批量索引.md  README.zh-CN.md  关西城市圈_主要活动列表_v1.md  广佛顺珠广府圈_主要活动列表_v1.md  日本城市圈列表_热门与次热门_v1.md  最终报告数据缺口与阶段模板存储建议_v1.md  软规则硬规则兼容说明.md
marketing/: templates.md  目录说明.md
opencli-main/: .gitignore  package-lock.json
openspec/: config.yaml
ops/: HANDOFF.md
report/: 02_前置与总纲页型详细说明.md  03_旅行注意事项模块设计.md  03_章节_每日_专题页型详细说明.md  05_设计感与重点突出规则_验收清单.md  06_文档包索引.md
sakura-rush-2026/: day5.html  day7.html  overview.html
scripts/: README.md  _add_columns.py  _add_missing_columns.py  _check_alembic.py  _check_corridors.py  _check_orig_corridors.py  _check_presets.py  _check_specialty.py  _check_tables.py  _circle_resolver.py  _create_missing_tables.py  _d46_curate_batch.py  _d46_curate_experience.py  _d46_curate_flagship.py  _d46_curate_quality.py  _d46_fix_hotels.py  (+189 more)
(+1911 files in other folders)
