[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "japan-travel-ai"
version = "0.1.0"
description = "Japan Travel AI - Backend Planning & Delivery Engine"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    # Config
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    # Async task queue
    "arq>=0.26.1",
    "redis>=5.2.0",
    # HTTP client (for external API calls)
    "httpx[http2]>=0.28.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    # AI / LLM
    "openai>=1.50.0",
    # Templating / Export
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    # Structured logging
    "structlog>=24.0.0",
    # Retry / resilience
    "tenacity>=9.0.0",
    # AI observability
    "langfuse>=2.0.0",
    # Error monitoring
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",  # for TestClient async
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "l2_contract_blocker: contract-first layer-2 blocker coverage",
    "l3_handbook_delivery_blocker: handbook-delivery acceptance blocker coverage",
    "phase2_acceptance: phase2 second-layer acceptance coverage",
    "legacy_compatibility: legacy-chain compatibility baseline coverage",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
