[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "japan-travel-ai"
version = "0.1.0"
description = "Japan Travel AI - Backend Planning & Delivery Engine"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    # Config
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    # Async task queue
    "arq>=0.26.1",
    "redis>=5.2.0",
    # HTTP client (for external API calls)
    "httpx[http2]>=0.28.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    # AI / LLM
    "openai>=1.50.0",
    # Templating / Export
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    # Structured logging
    "structlog>=24.0.0",
    # Retry / resilience
    "tenacity>=9.0.0",
    # AI observability
    "langfuse>=2.0.0",
    # Error monitoring
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",  # for TestClient async
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app/domains/planning_v2/tests"]
markers = [
    "l2_contract_blocker: planning_v2 contract gate — must stay green before merging pipeline changes",
    "smoke: 3 core regression cases (7d_classic, 9d_must_visit, 13d_complex)",
    "full: all 12 regression cases",
    "cp1: checkpoint 1 — Step 1-4 input resolution and pool reduction",
    "cp2: checkpoint 2 — Step 5-7.5 activities and hotel selection",
    "cp3: checkpoint 3 — Step 8-12 scheduling and timeline",
    "cp4: checkpoint 4 — Step 13-16 meals, budget, plan_b",
    "live_api: requires real Anthropic API key, runs serially with ≥3s delay",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
